src/test/resources/syntax/invalid/target_method_duplicate_return.unpick
unpick v3
target_method foo.Bar baz ()V
    return a
    return b